# fastapi_technology_preview

./: .gitignore  .pylintrc  configuration.json  pyproject.toml  tools.py  workspace.code-workspace
backend/app/: config.py  main.py  models.py  scopes.py  tags.py  test_main.py  utils.py
backend/app/modules/: auth.py  users.py
backend/app/routes/: auth.py  users.py
backend/app/tests/: test_main.py
backend/db/: schemas.py
src/: main.py
src/db/: schemas.py  utils.py
